Update AWS region in workflow configuration

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,7 +31,7 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: MY_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: us-east-2                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: mlflow-pyfunc           # set this to your Amazon ECR repository name
   ECS_SERVICE: plant-classifier-task-service-gewiifiw                 # set this to your Amazon ECS service name
   ECS_CLUSTER: plant-leaf-cluster                 # set this to your Amazon ECS cluster name
